syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "rpc_create_user.proto";
import "rpc_login_user.proto";

option go_package = "github.com/Andrem19/bundle_go_grpc_api/pb";

service MyBundleProj {
    rpc CreateUser (CreateUserRequest) returns (CreateUserRsponse){
        option (google.api.http) = {
            post: "/v1/create_user"
            body: "*"
        };
    }
    rpc LoginUser (LoginUserRequest) returns (LoginUserRsponse) {
        option (google.api.http) = {
            post: "/v1/login_user"
            body: "*"
        };
    }
}